# UnrealImageMaker

./: .gitignore  CONTEXT.md  README.md  index.html  package-lock.json  package.json  start-tauri-dev.bat  vite.config.mjs
backend/: pyproject.toml  requirements-optional.txt  requirements.txt
backend/tests/: test_api.py  test_game_ui.py  test_image_processing.py  test_mcp_pixel.py  test_project_manifest.py  test_specialized_pipelines.py
backend/uim_core/: __init__.py  api.py  api_entry.py  asset_index.py  cli.py  constants.py  game_ui.py  game_ui_bake.mjs  image_processing.py  json_io.py  manifest.py  mcp_game_ui.py  mcp_pixel.py  mcp_server.py  models.py  network.py  paths.py  pipelines.py  pixel_postprocess.py  project.py  specialized.py  styles.py  validation.py
backend/uim_core/providers/: __init__.py  codex_oauth_image.py  openai_image.py  rembg_adapter.py  sam21_adapter.py  seedance_provider.py  stream_events.py
backend/uim_core/unreal/: __init__.py  mcp_bridge.py  python_export.py
docs/: README.md  code-review-specialized-redesign.md  current-implementation-progress.md  long-term-plan.md  manifest-schema.md  model-management.md  mvp-plan.md  uim-project-format.md  unreal-export.md
docs/adr/: 0001-tilemap-wangtiles-logical-snap.md
scripts/: build-backend-sidecar.ps1  dev-backend.ps1  preview-static.ps1  readme-screenshots.mjs  tauri-before-dev.mjs  ui-smoke.mjs
src/: AppContext.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: RightPanel.tsx  (+2 more)
(+7 files in other folders)
