[project]
name = "uim-core"
version = "0.1.0"
description = "Core backend for UnrealImageMaker."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pillow>=10.0",
  "requests>=2.31",
  "numpy>=2.0",
  "opencv-python-headless>=4.10",
  "scipy>=1.14",
  "imageio-ffmpeg>=0.5",
  "rembg[cpu]>=2.0",
  "unfake>=1.0.7",
  "mcp>=1.0",
  "playwright>=1.50"
]

[project.optional-dependencies]
openai = ["openai>=2.0"]
rembg = ["rembg[cpu]>=2.0", "opencv-python-headless>=4.10", "scipy>=1.14", "unfake>=1.0.7"]
sam = ["torch>=2.5", "torchvision>=0.20"]
dev = ["pytest>=8.0", "pyinstaller>=6.0"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["uim_core"]
