[package]
name = "unreal-image-maker"
version = "0.1.0"
description = "AI-assisted 2D game asset production pipeline."
authors = ["UnrealImageMaker"]
edition = "2021"

[lib]
name = "unreal_image_maker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
